--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Data Science Demo</title>
+    </head>
+    <body>
+        <header>
+            <h1><a href="/">Data Science Demo</a></h1>
+        </header>
 
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>BTP on Github Pages</title>
-
-</head>
-
-<body>
-  <h1> hello world!!</h1>
-</body>
+       
+        <button><a href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/helloWorld.ipynb">Go to Code!</a></button>
+        <script src="https://gist.github.com/karmakarsubhajit/9a977f1e069e79e0a66c2291d80faf18.js"></script>
+        
+    </body>
 </html>
